[package]
name = "pscan"
version = "0.1.0"
edition = "2021"

authors = ["YeMiancheng <ymc.github@gmail.com>"]
description = "A cross-platform process filtering and analysis tool with window detection support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/pscan"
readme = "README.md"
keywords = ["process", "filter", "windows", "system", "monitor", "cli", "utility"]
categories = ["command-line-utilities", "system", "development-tools"]

[[bin]]
name = "pscan"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

# future：Unix platform support
[target.'cfg(unix)'.dependencies]
# add x11 or wayland 