[package]
name = "pscan"
version = "0.1.0"
edition = "2021"

authors = ["YeMiancheng <ymc.github@gmail.com>"]
description = "A cross-platform process filtering and analysis tool with window detection support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/pscan"
readme = "README.md"
keywords = ["process", "filter", "windows", "system", "monitor", "cli", "utility"]
categories = ["command-line-utilities", "system", "development-tools"]

[[bin]]
name = "pscan"
path = "src/main.rs"

[features]
default = ["always_on_top", "transparency", "position_set"]  # 默认启用窗口置顶、透明度和位置设置功能
always_on_top = ["windows"]  # 窗口置顶功能特性
transparency = ["windows"]   # 窗口透明度功能特性
position_set = ["windows"]   # 窗口位置设置功能特性
minimal = []                 # 最小功能集，不包含窗口置顶、透明度和位置设置

[dependencies]
sysinfo = "0.30.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
thiserror = "1.0"

# 条件依赖 - 使用可选依赖并通过特性控制
[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
]
optional = true

# future：Unix platform support
[target.'cfg(unix)'.dependencies]
# add x11 or wayland 